--- a/src/CleanArchitecture.WebUI/Views/Products/Details.cshtml
+++ b/src/CleanArchitecture.WebUI/Views/Products/Details.cshtml
@@ -9,7 +9,18 @@
         <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Description)</dt>
         <dd class="col-sm-10">@Html.DisplayFor(model => model.Description)</dd>
         <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Image)</dt>
-
+        <dd class="col-sm-10">
+            @if (!ViewBag.ImageExist)
+            {
+                <img src="~/images/noimage.png" class="rounded-circle"
+                     height="300" width="300" asp-append-version="true" />
+            }
+            else
+            {
+                <img src="~/images/@Model.Image" class="rounded-circle"
+                     height="300" width="300" asp-append-version="true" />
+            }
+        </dd>
         <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Price)</dt>
         <dd class="col-sm-10">@Html.DisplayFor(model => model.Price)</dd>
         <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Stock)</dt>
